<resources>
    <string name="app_name">Taxi Master Customer</string>

    <string-array name="spinner_time_entries">
        <item>ASAP</item>
        <item>Pick a time...</item>
    </string-array>

    <string name="spinner_time_prompt">Order time</string>

    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_skip">SKIP</string>
    <string name="btn_sign_up">SIGN UP</string>

    <string name="err_msg_phone">Invalid phone number</string>
    <string name="err_msg_password">Password cannot be empty</string>
    <string name="err_msg_password_sign_up_too_short">Password too short</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="err_msg_first_name">First name cannot be empty</string>
    <string name="err_msg_last_name">Last name cannot be empty</string>
    <string name="err_msg_confirm_password">Password mismatch</string>
    <string name="err_msg_password_sign_up_empty">Password cannote be empty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="comment_dialog_title">Review on our service</string>
    <string name="on_rating_success">Your review saved.</string>
    <string name="on_rating_failed">Review not saved. Try again.</string>

    <string name="rating_1">Worst service</string>
    <string name="rating_2">Not satisfied</string>
    <string name="rating_3">Satisfied</string>
    <string name="rating_4">Good</string>
    <string name="rating_5">Excellent service</string>

</resources>
